// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Columns block adds a column block using the appender 1`] = `
"<!-- fin:columns -->
<div class="fin-block-columns"><!-- fin:column -->
<div class="fin-block-column"></div>
<!-- /fin:column -->

<!-- fin:column -->
<div class="fin-block-column"></div>
<!-- /fin:column -->

<!-- fin:column -->
<div class="fin-block-column"></div>
<!-- /fin:column --></div>
<!-- /fin:columns -->"
`;

exports[`Columns block changes the vertical alignment on individual Column 1`] = `
"<!-- fin:columns {"verticalAlignment":"top"} -->
<div class="fin-block-columns are-vertically-aligned-top"><!-- fin:column {"verticalAlignment":"bottom"} -->
<div class="fin-block-column is-vertically-aligned-bottom"></div>
<!-- /fin:column -->

<!-- fin:column {"verticalAlignment":"top"} -->
<div class="fin-block-column is-vertically-aligned-top"></div>
<!-- /fin:column --></div>
<!-- /fin:columns -->"
`;

exports[`Columns block changes vertical alignment on Columns 1`] = `
"<!-- fin:columns {"verticalAlignment":"top"} -->
<div class="fin-block-columns are-vertically-aligned-top"><!-- fin:column {"verticalAlignment":"top"} -->
<div class="fin-block-column is-vertically-aligned-top"></div>
<!-- /fin:column -->

<!-- fin:column {"verticalAlignment":"top"} -->
<div class="fin-block-column is-vertically-aligned-top"></div>
<!-- /fin:column --></div>
<!-- /fin:columns -->"
`;

exports[`Columns block inserts block 1`] = `
"<!-- fin:columns -->
<div class="fin-block-columns"><!-- fin:column {"width":"50%"} -->
<div class="fin-block-column" style="flex-basis:50%"></div>
<!-- /fin:column -->

<!-- fin:column {"width":"50%"} -->
<div class="fin-block-column" style="flex-basis:50%"></div>
<!-- /fin:column --></div>
<!-- /fin:columns -->"
`;

exports[`Columns block removes column with the remove button 1`] = `
"<!-- fin:columns -->
<div class="fin-block-columns"><!-- fin:column -->
<div class="fin-block-column"></div>
<!-- /fin:column --></div>
<!-- /fin:columns -->"
`;

exports[`Columns block removes the only one left Column with the remove button 1`] = `
"<!-- fin:paragraph -->
<p></p>
<!-- /fin:paragraph -->"
`;

exports[`Columns block sets current vertical alignment on new Columns 1`] = `
"<!-- fin:columns {"verticalAlignment":"top"} -->
<div class="fin-block-columns are-vertically-aligned-top"><!-- fin:column {"verticalAlignment":"top"} -->
<div class="fin-block-column is-vertically-aligned-top"></div>
<!-- /fin:column -->

<!-- fin:column {"verticalAlignment":"top"} -->
<div class="fin-block-column is-vertically-aligned-top"></div>
<!-- /fin:column -->

<!-- fin:column {"verticalAlignment":"top"} -->
<div class="fin-block-column is-vertically-aligned-top"></div>
<!-- /fin:column --></div>
<!-- /fin:columns -->"
`;

exports[`Columns block transforms a nested Columns block into a Group block 1`] = `
"<!-- fin:group {"layout":{"type":"constrained"}} -->
<div class="fin-block-group"><!-- fin:group {"layout":{"type":"constrained"}} -->
<div class="fin-block-group"><!-- fin:columns -->
<div class="fin-block-columns"><!-- fin:column {"width":"100%"} -->
<div class="fin-block-column" style="flex-basis:100%"><!-- fin:paragraph -->
<p></p>
<!-- /fin:paragraph --></div>
<!-- /fin:column --></div>
<!-- /fin:columns --></div>
<!-- /fin:group --></div>
<!-- /fin:group -->"
`;

exports[`Columns block when using columns percentage mechanism sets custom values correctly 1`] = `
"<!-- fin:columns -->
<div class="fin-block-columns"><!-- fin:column {"width":"90%"} -->
<div class="fin-block-column" style="flex-basis:90%"></div>
<!-- /fin:column -->

<!-- fin:column {"width":"55.5%"} -->
<div class="fin-block-column" style="flex-basis:55.5%"></div>
<!-- /fin:column --></div>
<!-- /fin:columns -->"
`;

exports[`Columns block when using columns percentage mechanism updates the slider's input value 1`] = `
"<!-- fin:columns -->
<div class="fin-block-columns"><!-- fin:column {"width":"55.6%"} -->
<div class="fin-block-column" style="flex-basis:55.6%"></div>
<!-- /fin:column -->

<!-- fin:column -->
<div class="fin-block-column"></div>
<!-- /fin:column -->

<!-- fin:column -->
<div class="fin-block-column"></div>
<!-- /fin:column --></div>
<!-- /fin:columns -->"
`;

exports[`Columns block when using the columns layout picker sets the predefined percentages for 25 / 50 / 25 block 1`] = `
"<!-- fin:columns -->
<div class="fin-block-columns"><!-- fin:column {"width":"25%"} -->
<div class="fin-block-column" style="flex-basis:25%"></div>
<!-- /fin:column -->

<!-- fin:column {"width":"50%"} -->
<div class="fin-block-column" style="flex-basis:50%"></div>
<!-- /fin:column -->

<!-- fin:column {"width":"25%"} -->
<div class="fin-block-column" style="flex-basis:25%"></div>
<!-- /fin:column --></div>
<!-- /fin:columns -->"
`;

exports[`Columns block when using the columns layout picker sets the predefined percentages for 33 / 33 / 33 block 1`] = `
"<!-- fin:columns -->
<div class="fin-block-columns"><!-- fin:column -->
<div class="fin-block-column"></div>
<!-- /fin:column -->

<!-- fin:column -->
<div class="fin-block-column"></div>
<!-- /fin:column -->

<!-- fin:column -->
<div class="fin-block-column"></div>
<!-- /fin:column --></div>
<!-- /fin:columns -->"
`;

exports[`Columns block when using the columns layout picker sets the predefined percentages for 33 / 66 block 1`] = `
"<!-- fin:columns -->
<div class="fin-block-columns"><!-- fin:column {"width":"33.33%"} -->
<div class="fin-block-column" style="flex-basis:33.33%"></div>
<!-- /fin:column -->

<!-- fin:column {"width":"66.66%"} -->
<div class="fin-block-column" style="flex-basis:66.66%"></div>
<!-- /fin:column --></div>
<!-- /fin:columns -->"
`;

exports[`Columns block when using the columns layout picker sets the predefined percentages for 50 / 50 block 1`] = `
"<!-- fin:columns -->
<div class="fin-block-columns"><!-- fin:column -->
<div class="fin-block-column"></div>
<!-- /fin:column -->

<!-- fin:column -->
<div class="fin-block-column"></div>
<!-- /fin:column --></div>
<!-- /fin:columns -->"
`;

exports[`Columns block when using the columns layout picker sets the predefined percentages for 66 / 33 block 1`] = `
"<!-- fin:columns -->
<div class="fin-block-columns"><!-- fin:column {"width":"66.66%"} -->
<div class="fin-block-column" style="flex-basis:66.66%"></div>
<!-- /fin:column -->

<!-- fin:column {"width":"33.33%"} -->
<div class="fin-block-column" style="flex-basis:33.33%"></div>
<!-- /fin:column --></div>
<!-- /fin:columns -->"
`;

exports[`Columns block when using the columns layout picker sets the predefined percentages for 100 block 1`] = `
"<!-- fin:columns -->
<div class="fin-block-columns"><!-- fin:column -->
<div class="fin-block-column"></div>
<!-- /fin:column --></div>
<!-- /fin:columns -->"
`;

exports[`Columns block when using the number of columns setting adds a column block when incrementing the value 1`] = `
"<!-- fin:columns -->
<div class="fin-block-columns"><!-- fin:column -->
<div class="fin-block-column"></div>
<!-- /fin:column -->

<!-- fin:column -->
<div class="fin-block-column"></div>
<!-- /fin:column -->

<!-- fin:column -->
<div class="fin-block-column"></div>
<!-- /fin:column --></div>
<!-- /fin:columns -->"
`;

exports[`Columns block when using the number of columns setting adds at least 15 Column blocks without limitation 1`] = `
"<!-- fin:columns -->
<div class="fin-block-columns"><!-- fin:column -->
<div class="fin-block-column"></div>
<!-- /fin:column -->

<!-- fin:column -->
<div class="fin-block-column"></div>
<!-- /fin:column -->

<!-- fin:column -->
<div class="fin-block-column"></div>
<!-- /fin:column -->

<!-- fin:column -->
<div class="fin-block-column"></div>
<!-- /fin:column -->

<!-- fin:column -->
<div class="fin-block-column"></div>
<!-- /fin:column -->

<!-- fin:column -->
<div class="fin-block-column"></div>
<!-- /fin:column -->

<!-- fin:column -->
<div class="fin-block-column"></div>
<!-- /fin:column -->

<!-- fin:column -->
<div class="fin-block-column"></div>
<!-- /fin:column -->

<!-- fin:column -->
<div class="fin-block-column"></div>
<!-- /fin:column -->

<!-- fin:column -->
<div class="fin-block-column"></div>
<!-- /fin:column -->

<!-- fin:column -->
<div class="fin-block-column"></div>
<!-- /fin:column -->

<!-- fin:column -->
<div class="fin-block-column"></div>
<!-- /fin:column -->

<!-- fin:column -->
<div class="fin-block-column"></div>
<!-- /fin:column -->

<!-- fin:column -->
<div class="fin-block-column"></div>
<!-- /fin:column -->

<!-- fin:column -->
<div class="fin-block-column"></div>
<!-- /fin:column -->

<!-- fin:column -->
<div class="fin-block-column"></div>
<!-- /fin:column -->

<!-- fin:column -->
<div class="fin-block-column"></div>
<!-- /fin:column --></div>
<!-- /fin:columns -->"
`;

exports[`Columns block when using the number of columns setting reaches the minimum limit of number of column blocks 1`] = `
"<!-- fin:columns -->
<div class="fin-block-columns"><!-- fin:column -->
<div class="fin-block-column"></div>
<!-- /fin:column --></div>
<!-- /fin:columns -->"
`;

exports[`Columns block when using the number of columns setting removes a column block when decrementing the value 1`] = `
"<!-- fin:columns -->
<div class="fin-block-columns"><!-- fin:column -->
<div class="fin-block-column"></div>
<!-- /fin:column --></div>
<!-- /fin:columns -->"
`;
